# archrepo2

./: README.mkd  README.rst  archrepo.ini  archrepo.ini.example  archreposrv  pkgreader.py  pyproject.toml  repomon.py  setup.py  test_readpkg.py
archrepo2/: __init__.py  archreposrv.py  pkgreader.py  repomon.py
archrepo2/lib/: __init__.py  archpkg.py  nicelogger.py
misc/: archrepo2.ini.example  archrepo2.service
scripts/: common.py  on_update_notification  remove_old_packages  test_readpkg.py  touch_pkg_with_newer_sig  upgrade_from_0.1.py  upgrade_from_0.1_to_0.2.py  upgrade_from_0.2_to_0.3.py  upgrade_from_0.3_to_0.4.py
test/: instructions.act  repomon_test.py
